feat: update message persistence setting to auto-delete messages

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -231,7 +231,7 @@
     const WS_URL = `ws://${globalThis.location.host}`;
 
     // Persistir mensajes (mantener historial completo)
-    const PERSIST_MESSAGES = true; // true = mantener historial, false = auto-eliminar
+    const PERSIST_MESSAGES = false; // true = mantener historial, false = auto-eliminar
 
     // Configuración según modo
     const MAX_MESSAGES_PERSIST = 100;
